# se-toolkit-hackathon-

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_building_room.py  0003_add_enum_values.py  0004_seed_resources.py  0005_add_ta_admin.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/models/: __init__.py  booking.py  resource.py  user.py
backend/app/schemas/: booking.py  resource.py  token.py  user.py
backend/app/services/: assistant.py  auth.py  booking.py  ws_manager.py
bot/: Dockerfile  pyproject.toml
bot/app/: api_client.py  config.py  main.py  scheduler.py
bot/app/filters/: registered.py
bot/app/handlers/: availability.py  booking.py  cancel.py  reminders.py  start.py
bot/app/keyboards/: inline.py
bot/app/middlewares/: auth.py
bot/app/states/: booking.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: assistant.ts  auth.ts  bookings.ts  client.ts  resources.ts
frontend/src/components/: AssistantPanel.tsx  BookingModal.tsx  MyBookings.tsx  Navbar.tsx  ResourceCard.tsx  ResourceTable.tsx  TimelineView.tsx
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/store/: index.ts
nginx/: nginx.conf
nginx/conf.d/: default.conf
(+7 files in other folders)
