[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-resource-sync-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
